[Java] Allow runtime access to `sun.nio.ch` on JDK 9+.